--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,2 @@
 <h1>Movies</h1>
-<div class="container">
-  <div class="row">
-    <app-movie-card></app-movie-card>
-    <app-movie-card></app-movie-card>
-    <app-movie-card></app-movie-card>
-    <app-movie-card></app-movie-card>
-    <app-movie-card></app-movie-card>
-    </div>
-  </div>
+<app-movies-display></app-movies-display>
