changed card styling

--- a/src/app/movie-card/movie-card.component.scss
+++ b/src/app/movie-card/movie-card.component.scss
@@ -1,33 +1,18 @@
-$card-width: 493px;
-img{
-  max-width: 185px;
-}
-.card{
-  width: $card-width;
-  height: 278px;
+
+.movieCard{
+  position: relative;
   border: none;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 12px 3px;
-  margin: 10px;
-
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 8px 3px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 8px 3px;
+  -ms-box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 8px 3px;
+  margin: 4px;
 }
 
-.col{
-  padding: 0;
-}
-.card:hover{
+.movieCard:hover{
   cursor: pointer;
   -ms-transform: scale(1.025, 1.025); /* IE 9 */
   -webkit-transform: scale(1.025, 1.025); /* Safari */
   transform: scale(1.025, 1.025);
 }
 
-.card-text{
-  -webkit-font-smoothing: antialiased;
-  box-sizing: border-box;
-  color: rgb(77, 77, 77);
-  display: block;
-  font-size: 0.8rem;
-  height: 140px;
-  overflow-x: hidden;
-  overflow-y: hidden;
-}
+
