--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -1,14 +1,3 @@
-<div class="col card">
-    <div class="row no-gutters">
-        <div class="col-auto">
-            <img [src]="'https://image.tmdb.org/t/p/w370_and_h556_bestv2' + posterImage" class="img-fluid" alt="">
-        </div>
-        <div class="col content">
-            <div class="card-body">
-                <h4 class="card-title">{{ title }}</h4>
-                <h6 class="card-subtitle">{{ releaseDate }}</h6>
-                <p class="card-text">{{ description }}</p>
-            </div>
-        </div>
-    </div>
+<div class="movieCard">
+  <img [src]="defaultUrl + posterImage" class="img-fluid" >
 </div>
