--- a/src/app/movies-display/movies-display.component.html
+++ b/src/app/movies-display/movies-display.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="row"  *ngIf="movies">
-    <div *ngFor="let movie of movies.results">
+  <div class="row no-gutters"  *ngIf="movies">
+    <div class="col-lg-2 col-6 " *ngFor="let movie of movies.results">
       <app-movie-card
         [title]="movie.title"
         [releaseDate]="movie.release_date"
