movies nog clickable

--- a/src/app/movie-card/movie-card.component.scss
+++ b/src/app/movie-card/movie-card.component.scss
@@ -13,6 +13,10 @@
   -ms-transform: scale(1.025, 1.025); /* IE 9 */
   -webkit-transform: scale(1.025, 1.025); /* Safari */
   transform: scale(1.025, 1.025);
+
+  img{
+    opacity: 0.9;
+  }
 }
 
 
