--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -1,3 +1,3 @@
-<div class="movieCard">
+<div class="movieCard" [routerLink]="'/movie/' + movieId">
   <img [src]="defaultUrl + posterImage" class="img-fluid" >
 </div>
