--- a/src/app/movies-display/movies-display.component.html
+++ b/src/app/movies-display/movies-display.component.html
@@ -1,10 +1,8 @@
-<div class="container">
+<div class="container-fluid">
   <div class="row no-gutters"  *ngIf="movies">
-    <div class="col-lg-2 col-6 " *ngFor="let movie of movies.results">
+    <div class="col-lg-2 col-md-3 col-sm-3  col-6" *ngFor="let movie of movies.results">
       <app-movie-card
-        [title]="movie.title"
-        [releaseDate]="movie.release_date"
-        [description]="movie.overview"
+        [movieId]="movie.id"
         [posterImage]="movie.poster_path">
       </app-movie-card>
     </div>
