--- a/src/app/movie-detail/movie-detail.component.html
+++ b/src/app/movie-detail/movie-detail.component.html
@@ -1,1 +1,5 @@
-<div [style.background-image]="'url(' + defaultUrl + movie.backdrop_path + ')'" class="background" ></div>
+<div class="wrapper">
+    <h1>{{ movie.title }}</h1>
+
+  <div [style.background-image]="'url(' + defaultUrl + movie.backdrop_path + ')'" class="background" ></div>
+</div>
