--- a/src/app/movie-detail/movie-detail.component.scss
+++ b/src/app/movie-detail/movie-detail.component.scss
@@ -1,8 +1,25 @@
+.wrapper{
+  position: relative;
+}
 .background{
   height: 100vh;
   width: 100vw;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  overflow: hidden;
+  position: fixed;
+
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
+}
+
+h1{
+  position: absolute;
+  color:white;
+  z-index: 2;
+  text-shadow: 1px 1px 2px black;
+  top: 100px;
 }
